<resources>
    <string name="app_name">WorldDataBank</string>
    <string name="title_activity_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">World Bank Open Data</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_plot">PlotActivity</string>
    <string name="welcome">Welcome to</string>
    <string name="app_title">World Bank Open Data</string>
    <string name="app_description">This app allows you to browse through various data/statistics and view, graphically, the changes over the years</string>
    <string name="title_activity_main">World Bank Open Data</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Preferences -->
    <string name="choose_info"><![CDATA[(click here for info)\nBy choosing \'Country —> Argument —> Indicator\', you can request a specific indicator starting from the country of interest\n(e.g. Italy —> Economy —> GDP)\n\nBy choosing \'Argument —> Indicator —> Country\', you can request a specific indicator starting from the argument of interest and ending with the country\n(e.g. Economy -> GDP -> Italy)]]></string>
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="language">Language</string>
    <string name="def_lang">Default language</string>
    <string name="dark_mode">Light/Dark theme</string>
    <string name="storage">Storage</string>
    <string name="del_after">Delete stored statistics after</string>
    <string name="one_day">1 day</string>
    <string name="three_days">3 days</string>
    <string name="seven_days">7 days</string>
    <string name="one_month">1 month</string>
    <string name="never">Never</string>
    <string name="del_stat">Delete all stored statistics now</string>
    <string name="del_stat_now">By clicking here you will delete all statistics you downloaded</string>
    <string name="save_share">What do you want to do?</string>
    <string name="save_graph">Save chart to Gallery</string>
    <string name="share_graph">Share chart on Whatsapp</string>
    <string name="cancel">Cancel</string>
    <string name="choose_country">Choose a country</string>
    <string name="choose_topic">Choose a Topic</string>
    <string name="choose_indicator">Choose an Indicator</string>
    <string name="please_choose_how_to_proceed">Please choose how to proceed</string>
    <string name="save_graph_data">Save chart data offline</string>
    <string name="grantPerm">Please grant the permissions to read/write from external storage</string>
    <string name="permError"><![CDATA[---> Permissions error <---]]></string>
    <string name="permDenied"><![CDATA[Permissions permanently denied (with "Don\'t show again" checkbox). Please grant them from \'Settings->Permissions\' app page.\n\nDo you want to open it now?]]></string>
    <string name="yes">Yes</string>
    <string name="error">Error</string>
    <string name="indicator_not_available">We are so sorry but this indicator is not available</string>
</resources>
