<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <it.apperol.group.worlddatabank.myviews.MyTextView
        android:id="@+id/myTvChooseSaveShare"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
        android:text="@string/save_share"
        android:textAlignment="center"
        android:autoSizeTextType="uniform"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbSaveData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_graph_data"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:icon="@drawable/chart_icon"
        app:iconSize="30dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/darker_gray"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_graph"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:icon="@drawable/save_icon"
        app:iconSize="30dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_graph"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:icon="@drawable/share_icon"
        app:iconSize="30dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp" />
</LinearLayout>